# AtlasForge

./: .gitignore  1234.txt  2222  CMakeLists.txt  CONTRIBUTING.md  Implement.txt  README.md  build.sh  setup.sh
.github/workflows/: atlas_contract_bot.yml  atlas_crash_reporter.yml  atlas_determinism.yml
client/: CMakeLists.txt  main.cpp
docs/: 00_OVERVIEW.md  02_EDITOR_DESIGN.md  03_ASSET_SYSTEM.md  05_NETWORKING.md  06_WORLD_GENERATION.md  07_GAMEPLAY_MECHANICS.md  09_DEVELOPMENT_ROADMAP.md  10_REPO_SPLIT_PLAN.md  12_GUI_SYSTEM.md  15_FLOW_GRAPH.md  16_ATLAS_AI.md  17_PROCEDURAL_MODELING.md  ARCHITECTURE.md  ATLAS_CONTRIBUTOR_RULES.md  ATLAS_CORE_CONTRACT.md  ATLAS_LOCKDOWN_CHECKLIST.md  BUILDING.md  EDITOR_STATUS.md  IMPLEMENTATION_PATH.md  IMPLEMENTATION_PLATFORM.md  MARKETPLACE_IMPORTING.md  NEXT_IMPLEMENTATION_TASKS.md  PROJECT_COMPLETION_STATUS.md
editor/: CMakeLists.txt  main.cpp
editor/ai/: AIAggregator.cpp  AIAggregator.h  TemplateAIBackend.cpp  TemplateAIBackend.h
editor/assistant/: AssetGraphAssistant.cpp  AssetGraphAssistant.h  EditorAssistant.cpp  EditorAssistant.h
editor/panels/: AIDiffViewerPanel.cpp  AIDiffViewerPanel.h  AtlasAssistantPanel.cpp  AtlasAssistantPanel.h  CIDashboardPanel.cpp  CIDashboardPanel.h  ConsolePanel.cpp  ConsolePanel.h  ECSInspectorPanel.cpp  ECSInspectorPanel.h  GameMechanicsUIPanel.cpp  GameMechanicsUIPanel.h  InteractionDebugPanel.cpp  InteractionDebugger.cpp  InteractionDebugger.h  MaterialEditorPanel.h  MeshViewerPanel.h  NetInspectorPanel.cpp  NetInspectorPanel.h  PrefabEditorPanel.h  ProfilerPanel.cpp  ProjectPickerPanel.cpp  ProofViewerPanel.cpp  ProofViewerPanel.h  ReplayTimelinePanel.cpp  ReplayTimelinePanel.h  StateHashDiffPanel.cpp  StateHashDiffPanel.h  TruthUIPanel.h  VoiceCommandPanel.cpp
editor/tools/: GamePackagerPanel.cpp  GamePackagerPanel.h  IEditorToolModule.h  TileEditorModule.cpp  TileEditorModule.h
editor/ui/: DefaultEditorLayout.h  EditorAttachProtocol.cpp  EditorAttachProtocol.h  EditorLayout.cpp  EditorLayout.h  EditorPanel.h  LauncherScreen.cpp  LauncherScreen.h
engine/: CMakeLists.txt
engine/ai/: BehaviorNodes.cpp  LLMBackend.cpp  LLMBackend.h  Personality.h
engine/animation/: AnimationGraph.cpp  AnimationGraph.h
engine/assets/: AssetCategoryRegistry.cpp  AssetCategoryRegistry.h  AssetValidator.cpp  AssetValidator.h  MarketplaceImporter.cpp  MarketplaceImporter.h  SocketHttpClient.cpp  SocketHttpClient.h
engine/character/: CharacterGraph.cpp  CharacterGraph.h
engine/core/: Engine.cpp  Engine.h  Logger.cpp  Logger.h
engine/core/contract/: AtlasContract.h  SimulationGuard.h
engine/ecs/: ECS.cpp  ECS.h
engine/flow/: GameFlowGraph.cpp  GameFlowGraph.h
engine/module/: IGameModule.h  ModuleLoader.cpp
engine/net/: NetContext.cpp  NetContext.h  NetHardening.cpp  NetHardening.h  Replication.cpp  Replication.h
engine/platform/: PlatformWindow.h  Win32Window.cpp  X11Window.cpp
engine/procedural/: ProceduralMaterialNodes.cpp  ProceduralMaterialNodes.h
engine/production/: CertifiedBuild.cpp  CertifiedBuild.h  GamePackager.h
engine/render/: AtlasShaderIR.cpp  GLRenderer.cpp  VulkanRenderer.cpp  VulkanRenderer.h
engine/sim/: ComponentMigration.cpp  DesyncReproducer.cpp  ReplayDivergenceInspector.cpp  ReplayDivergenceInspector.h  ReplayRecorder.cpp  ReplayRecorder.h  SaveSystem.cpp  SaveSystem.h  TickScheduler.cpp  TickScheduler.h  TimeModel.cpp  TimeModel.h  WorldState.cpp  WorldState.h
engine/sound/: SoundGraph.cpp  SoundGraph.h
engine/tile/: TileGraph.cpp  TileGraph.h
engine/ui/: DiagnosticsOverlay.h  FontBootstrap.cpp  FontBootstrap.h  GUIInputRecorder.cpp  HUDOverlay.cpp  HUDOverlay.h  HeadlessGUI.cpp  InputFieldManager.cpp  MenuManager.cpp  MenuManager.h  UIConstants.h  UIEventRouter.h  UILayoutSolver.cpp  UILayoutSolver.h  UIManager.cpp  UIManager.h  UISceneGraph.cpp  UISceneGraph.h  UIScreenGraph.cpp  UIScreenGraph.h
engine/weapon/: WeaponGraph.cpp  WeaponGraph.h
engine/world/: WorldNodes.cpp
modules/atlas_gameplay/: CMakeLists.txt
projects/arena2d/module/: Arena2DModule.cpp
projects/eveoffline/module/: EveOfflineModule.cpp
runtime/: main.cpp
server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp  test_animation.cpp  test_arena2d_module.cpp  test_asset_browser.cpp  test_character.cpp  test_crash_reporter.cpp  test_create_atlas_project.py  test_deterministic_allocator.cpp  test_ecs_inspector.cpp  test_editor_assistant.cpp  test_engine.cpp  test_engine_input_routing.cpp  test_engine_integration.cpp  test_eveoffline_module.cpp  test_flow.cpp  test_font_bootstrap.cpp  test_game_packager.cpp  test_golden_replays.cpp  test_gui_completion.cpp  test_gui_next_managers.cpp  test_gui_next_tasks.cpp  test_headless_gui.cpp  test_hud_overlay.cpp  test_include_firewall.cpp  test_launcher_screen.cpp  test_lockdown_phase2.cpp  test_logger.cpp  test_marketplace_importer.cpp  test_menu_system.cpp  test_net_queue.cpp  test_next_tasks.cpp  test_next_tasks_phase15.cpp  test_next_tasks_phase3.cpp  test_next_tasks_phase5.cpp  test_next_tasks_phase6.cpp  test_panel_draw_impl.cpp  test_permission_manager.cpp  test_prefab_editor.cpp  test_procedural_material.cpp  (+10 more)
tileeditor/: main.cpp
tools/: contract_scan.py  crash_reporter.py  replay_minimizer.py
