add_executable(AtlasTests
    main.cpp
    test_graphvm.cpp
    test_ecs.cpp
    test_components.cpp
    test_asset.cpp
    test_net.cpp
    test_net_queue.cpp
    test_world.cpp
    test_compiler.cpp
    test_engine.cpp
    test_console.cpp
    test_terrain.cpp
    test_noise.cpp
    test_streaming.cpp
    test_galaxy.cpp
    test_interaction.cpp
    test_interaction_graph.cpp
    test_diplomacy.cpp
    test_asset_graph.cpp
    test_mod.cpp
    test_editor_assistant.cpp
    test_input.cpp
    test_camera.cpp
    test_physics.cpp
    test_audio.cpp
    test_gameplay.cpp
    test_skill.cpp
    test_weapon.cpp
    test_character.cpp
    test_animation.cpp
    test_tile.cpp
    test_sound.cpp
    test_ui_screen.cpp
    test_flow.cpp
    test_story.cpp
    test_project.cpp
    test_command.cpp
    test_worldgraph.cpp
    test_voice.cpp
    test_plugin.cpp
    test_heightfield.cpp
    test_strategygraph.cpp
    test_server_rules.cpp
    test_conversation.cpp
    test_ai_signals.cpp
    test_ai_memory.cpp
    test_relationship.cpp
    test_behaviorgraph.cpp
    test_graph_serializer.cpp
    test_uigraph.cpp
    test_schema_validator.cpp
    test_graph_cache.cpp
    test_ecs_serialization.cpp
    test_snapshot.cpp
    test_ecs_inspector.cpp
    test_replication.cpp
    test_asset_browser.cpp
    test_asset_cooker.cpp
    test_graph_editor.cpp
    test_asset_assistant.cpp
    test_build_profile.cpp
    test_mod_loader.cpp
    test_platform_target.cpp
    test_profiler_panel.cpp
    test_replay_recorder.cpp
    test_visual_diff.cpp
    test_crash_handler.cpp
    test_logger.cpp
    test_net_inspector.cpp
    test_game_packager.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ConsolePanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/InteractionDebugger.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ECSInspectorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/AssetBrowserPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/WorldGraphPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ProfilerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/NetInspectorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/tools/GamePackagerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/tools/VisualDiff.cpp
    ${CMAKE_SOURCE_DIR}/editor/assistant/EditorAssistant.cpp
    ${CMAKE_SOURCE_DIR}/editor/assistant/AssetGraphAssistant.cpp
)

target_link_libraries(AtlasTests AtlasEngine)
target_include_directories(AtlasTests PRIVATE ${CMAKE_SOURCE_DIR}/editor)

add_test(NAME AtlasTests COMMAND AtlasTests)
