add_executable(AtlasTests
    main.cpp
    test_graphvm.cpp
    test_ecs.cpp
    test_components.cpp
    test_component_category.cpp
    test_asset.cpp
    test_marketplace_importer.cpp
    test_net.cpp
    test_net_queue.cpp
    test_world.cpp
    test_compiler.cpp
    test_engine.cpp
    test_console.cpp
    test_terrain.cpp
    test_noise.cpp
    test_streaming.cpp
    test_galaxy.cpp
    test_interaction.cpp
    test_interaction_graph.cpp
    test_diplomacy.cpp
    test_asset_graph.cpp
    test_mod.cpp
    test_editor_assistant.cpp
    test_input.cpp
    test_camera.cpp
    test_physics.cpp
    test_audio.cpp
    test_gameplay.cpp
    test_skill.cpp
    test_weapon.cpp
    test_character.cpp
    test_animation.cpp
    test_tile.cpp
    test_sound.cpp
    test_ui_screen.cpp
    test_flow.cpp
    test_flow_ir.cpp
    test_flow_codegen.cpp
    test_flow_debugger.cpp
    test_shader_ir.cpp
    test_build_manifest.cpp
    test_story.cpp
    test_project.cpp
    test_command.cpp
    test_worldgraph.cpp
    test_voice.cpp
    test_plugin.cpp
    test_heightfield.cpp
    test_strategygraph.cpp
    test_server_rules.cpp
    test_conversation.cpp
    test_ai_signals.cpp
    test_ai_memory.cpp
    test_relationship.cpp
    test_behaviorgraph.cpp
    test_graph_serializer.cpp
    test_uigraph.cpp
    test_schema_validator.cpp
    test_graph_cache.cpp
    test_ecs_serialization.cpp
    test_snapshot.cpp
    test_ecs_inspector.cpp
    test_replication.cpp
    test_asset_browser.cpp
    test_asset_cooker.cpp
    test_graph_editor.cpp
    test_asset_assistant.cpp
    test_build_profile.cpp
    test_mod_loader.cpp
    test_platform_target.cpp
    test_profiler_panel.cpp
    test_replay_recorder.cpp
    test_visual_diff.cpp
    test_crash_handler.cpp
    test_logger.cpp
    test_net_inspector.cpp
    test_game_packager.cpp
    test_game_module.cpp
    test_atlas_gameplay.cpp
    test_eveoffline_module.cpp
    test_arena2d_module.cpp
    test_ui_command_bus.cpp
    test_ui_manager.cpp
    test_ui_layout_solver.cpp
    test_ui_nodes_extended.cpp
    test_state_hasher.cpp
    test_replay_divergence.cpp
    test_deterministic_allocator.cpp
    test_permission_manager.cpp
    test_hud_overlay.cpp
    test_replay_timeline_panel.cpp
    test_render.cpp
    test_time_model.cpp
    test_world_state.cpp
    test_save_system.cpp
    test_engine_integration.cpp
    test_next_tasks.cpp
    test_next_tasks_phase2.cpp
    test_gui_dsl_parser.cpp
    test_gui_input_recorder.cpp
    test_headless_gui.cpp
    test_job_tracer.cpp
    test_include_firewall.cpp
    test_next_steps.cpp
    test_golden_replays.cpp
    test_enforcement.cpp
    test_lockdown_phase2.cpp
    test_lockdown_phase3.cpp
    test_gui_completion.cpp
    test_tlc_model_checker.cpp
    test_proof_viewer.cpp
    test_replay_proof_exporter.cpp
    test_ci_dashboard.cpp
    test_procedural_mesh.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ConsolePanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/InteractionDebugger.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ECSInspectorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/AssetBrowserPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/WorldGraphPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ProfilerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ReplayTimelinePanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/NetInspectorPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/StateHashDiffPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/SaveFileBrowserPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/JobTracePanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/ProofViewerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/panels/CIDashboardPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/tools/GamePackagerPanel.cpp
    ${CMAKE_SOURCE_DIR}/editor/tools/VisualDiff.cpp
    ${CMAKE_SOURCE_DIR}/editor/assistant/EditorAssistant.cpp
    ${CMAKE_SOURCE_DIR}/editor/assistant/AssetGraphAssistant.cpp
    ${CMAKE_SOURCE_DIR}/editor/ui/EditorAttachProtocol.cpp
    ${CMAKE_SOURCE_DIR}/editor/ui/EditorLayout.cpp
)

target_link_libraries(AtlasTests AtlasEngine AtlasGameplay EveOfflineModule Arena2DModule)
target_include_directories(AtlasTests PRIVATE ${CMAKE_SOURCE_DIR}/editor)
target_compile_definitions(AtlasTests PRIVATE CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

add_test(NAME AtlasTests COMMAND AtlasTests)
